--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,27 @@ body {
 .selection:hover {
     transform: scale(1.5);
 }
+
+.results {
+    margin-top: 16px;
+    display: grid;
+    justify-content: center;
+    columns: repeat(2, 1);
+    justify-items: center;
+    align-items: center;
+}
+
+.results-score {
+    margin-left: 2px;
+    font-size: 8px;
+    color: darkblue;
+}
+
+.result-selection {
+    opacity: 0.5;
+}
+
+.result-selection.winner {
+    opacity: 1;
+    font-size: 24px;
+}
